<resources>
    <string name="default_work_duration">30</string>
    <string name="app_name">AndroidTest1</string>
    <string name="time_example">00:00</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="work_duration">Длительность работы</string>
    <string name="rest_duration">Длительность отдыха</string>
    <string name="cycle_amount">Количество циклов</string>
    <string name="start_button">start button for timer</string>
    <string name="increase_button">increase button for timer</string>
    <string name="decrease_button">decrease button for timer</string>
    <string name="default_amount_of_cycles">1</string>
    <string name="default_rest_duration">5</string>
    <string name="default_timer_interval">5</string>
</resources>