<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:clickable="true"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:background="@color/aside_background_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/cycle_amount_panel_text"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:text="@string/cycle_amount"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintEnd_toStartOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/cycle_amount_panel"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cycle_amount_panel_text">

        <Button
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:layout_marginHorizontal="10dp"
            android:autoSizeTextType="uniform"
            android:backgroundTint="@color/aside_background_color"
            android:contentDescription="@string/decrease_button"
            android:onClick="decreaseCycles"
            android:textColor="@color/blue3"
            app:strokeColor="@color/blue"
            app:strokeWidth="3dp" />

        <EditText
            android:id="@+id/cycle_amount_field"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:autofillHints="cycles"
            android:ems="3"
            android:gravity="center"
            android:inputType="number"
            android:text="@string/default_amount_of_cycles"
            android:textColor="@color/black" />

        <Button
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:layout_marginHorizontal="10dp"
            android:autoSizeTextType="uniform"
            android:backgroundTint="@color/aside_background_color"
            android:contentDescription="@string/decrease_button"
            android:onClick="increaseCycles"
            android:textColor="@color/blue3"
            app:strokeColor="@color/blue"
            app:strokeWidth="3dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/rest_duration_panel_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/rest_duration"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintEnd_toStartOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cycle_amount_panel" />

    <LinearLayout
        android:id="@+id/rest_duration_panel"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@+id/constraintLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rest_duration_panel_text">

        <Button
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:layout_marginHorizontal="10dp"
            android:autoSizeTextType="uniform"
            android:backgroundTint="@color/aside_background_color"
            android:contentDescription="@string/decrease_button"
            android:onClick="decreaseRestDuration"
            android:textColor="@color/blue3"
            app:strokeColor="@color/blue"
            app:strokeWidth="3dp" />

        <EditText
            android:id="@+id/rest_duration_field"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:ems="3"
            android:gravity="center"
            android:inputType="number"
            android:text="@string/default_rest_duration"
            android:textColor="@color/black" />

        <Button
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:layout_marginHorizontal="10dp"
            android:autoSizeTextType="uniform"
            android:backgroundTint="@color/aside_background_color"
            android:contentDescription="@string/decrease_button"
            android:onClick="increaseRestDuration"
            android:textColor="@color/blue3"
            app:strokeColor="@color/blue"
            app:strokeWidth="3dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/work_duration_panel_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/work_duration"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="11sp"

        app:layout_constraintEnd_toStartOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rest_duration_panel" />

    <LinearLayout
        android:id="@+id/work_duration_panel"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/work_duration_panel_text">

        <Button
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:layout_marginHorizontal="10dp"
            android:autoSizeTextType="uniform"
            android:backgroundTint="@color/aside_background_color"
            android:contentDescription="@string/decrease_button"
            android:onClick="decreaseWorkDuration"
            android:textColor="@color/blue3"
            app:strokeColor="@color/blue"
            app:strokeWidth="3dp" />

        <EditText
            android:id="@+id/work_duration_field"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:ems="3"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:text="@string/default_work_duration"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/increase_work_duration_btn"
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:layout_marginHorizontal="10dp"
            android:autoSizeTextType="uniform"
            android:backgroundTint="@color/aside_background_color"
            android:contentDescription="@string/decrease_button"
            android:onClick="increaseWorkDuration"
            android:rotation="180"
            app:strokeColor="@color/blue"
            app:strokeWidth="3dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewTimer"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginTop="278dp"
        android:background="@color/aside_background_color"
        android:fontFamily="@font/monomaniac_one"
        android:gravity="center"
        android:text="@string/time_example"
        android:textColor="@color/black"
        android:textSize="120sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_start"
        app:layout_constraintEnd_toStartOf="@+id/constraintLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/aside_background_color"
        android:contentDescription="@string/start_button"
        android:text="@string/start"
        android:textAllCaps="true"
        android:textColor="@color/blue3"
        android:textSize="52sp"
        android:textStyle="bold"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTimer"
        app:strokeColor="@color/blue"
        app:strokeWidth="5dp" />
</androidx.constraintlayout.widget.ConstraintLayout>